[gd_scene load_steps=27 format=3 uid="uid://b2moqdfvdqvht"]

[ext_resource type="Script" uid="uid://cia02h18arp7c" path="res://ui/menu.gd" id="1_0bcp5"]
[ext_resource type="Shader" uid="uid://cf8so48oob53x" path="res://shaders/bg.gdshader" id="2_l8jcj"]
[ext_resource type="Shader" uid="uid://bgl7lrf1j0bf2" path="res://ui/ui.gdshader" id="3_cp6tm"]
[ext_resource type="FontFile" uid="uid://bl56h1xh7ye8" path="res://ui/BagelFatOne-Regular.ttf" id="4_2fd1n"]
[ext_resource type="FontFile" uid="uid://84h2yrdfv5j6" path="res://ui/RustyHooks.ttf" id="5_cop0s"]
[ext_resource type="LabelSettings" uid="uid://cao8tvx0dc6yt" path="res://ui/mainMenu/label1.tres" id="6_oumb1"]
[ext_resource type="Texture2D" uid="uid://i1li7i8liyit" path="res://ui/mouse.png" id="7_7toyc"]

[sub_resource type="Gradient" id="Gradient_i6lef"]
interpolation_mode = 2
colors = PackedColorArray(0, 0, 0, 1, 0.714212, 0.714212, 0.714212, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture1D" id="GradientTexture1D_70i5f"]
gradient = SubResource("Gradient_i6lef")
width = 128

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i6lef"]
shader = ExtResource("2_l8jcj")
shader_parameter/gradient = SubResource("GradientTexture1D_70i5f")
shader_parameter/circle_color = Color(0.631373, 0.709804, 0.427451, 1)
shader_parameter/circle_multiplier = 15.0
shader_parameter/speed = 0.5
shader_parameter/direction = Vector2(1, 1)
shader_parameter/rotation = Transform2D(0.525, 0.85, -0.85, 0.525, 0, 0)

[sub_resource type="Gradient" id="Gradient_v86rl"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.00518135, 1)
colors = PackedColorArray(0.215686, 0.364706, 0.478431, 1, 0.631373, 0.709804, 0.427451, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_13sgg"]
gradient = SubResource("Gradient_v86rl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ytvr"]
shader = ExtResource("3_cp6tm")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 5.0
shader_parameter/intensityY = 5.0
shader_parameter/seed = 42.0

[sub_resource type="LabelSettings" id="LabelSettings_vjb58"]
font = ExtResource("4_2fd1n")
font_size = 200
font_color = Color(1, 0.956863, 0.901961, 1)
outline_size = 70
outline_color = Color(0.215686, 0.364706, 0.478431, 1)
shadow_size = 0
shadow_color = Color(0.25098, 0, 0, 1)
shadow_offset = Vector2(0, 0)
stacked_outline_count = 1
stacked_outline_0/size = 70
stacked_outline_0/color = Color(0.631373, 0.709804, 0.427451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g3eks"]
font = ExtResource("4_2fd1n")
font_size = 20
font_color = Color(1, 0.956863, 0.901961, 1)
outline_size = 70
outline_color = Color(0.25098, 0, 0, 1)
shadow_size = 0
shadow_color = Color(0.25098, 0, 0, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g3eks"]
shader = ExtResource("3_cp6tm")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 3.0
shader_parameter/intensityY = 3.0
shader_parameter/seed = 42.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v86rl"]
content_margin_top = 10.0
content_margin_bottom = 30.0

[sub_resource type="Theme" id="Theme_yqeox"]
Button/colors/font_color = Color(1, 0.956863, 0.901961, 1)
Button/font_sizes/font_size = 180
Button/fonts/font = ExtResource("5_cop0s")
Button/styles/normal = SubResource("StyleBoxFlat_v86rl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70i5f"]
shader = ExtResource("3_cp6tm")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 0.0
shader_parameter/intensityY = 0.0
shader_parameter/seed = 42.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v86rl"]
shader = ExtResource("3_cp6tm")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 3.0
shader_parameter/intensityY = 3.0
shader_parameter/seed = 42.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mj5lg"]
shader = ExtResource("3_cp6tm")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 0.0
shader_parameter/intensityY = 0.0
shader_parameter/seed = 42.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_13sgg"]
shader = ExtResource("3_cp6tm")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 3.0
shader_parameter/intensityY = 3.0
shader_parameter/seed = 42.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ufwb2"]
shader = ExtResource("3_cp6tm")
shader_parameter/interval = 0.5
shader_parameter/timeDelay = 0.0
shader_parameter/intensityX = 0.0
shader_parameter/intensityY = 0.0
shader_parameter/seed = 42.0

[sub_resource type="Animation" id="Animation_mhnvy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0980392, 0.254902, 0.388235, 0)]
}

[sub_resource type="Animation" id="Animation_con2f"]
resource_name = "startgame"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.46667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"new_game"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.02892),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.25098, 0.00392157, 0, 0), Color(0.25098, 0.00392157, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ytvr"]
_data = {
&"RESET": SubResource("Animation_mhnvy"),
&"startgame": SubResource("Animation_con2f")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0bcp5")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 4096
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0980392, 0.254902, 0.388235, 0)

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_i6lef")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.254902, 0.388235, 1)

[node name="ColorRect" type="TextureRect" parent="ColorRect"]
z_index = -350
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture1D_13sgg")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -842.5
offset_right = 842.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = -5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
z_index = 10
material = SubResource("ShaderMaterial_4ytvr")
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
text = "                            Where's My Lair?                            "
label_settings = SubResource("LabelSettings_vjb58")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
z_index = 10
material = SubResource("ShaderMaterial_4ytvr")
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
text = "               "
label_settings = SubResource("LabelSettings_g3eks")
horizontal_alignment = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_g3eks")
layout_mode = 2
theme = SubResource("Theme_yqeox")
theme_override_fonts/font = ExtResource("5_cop0s")
theme_override_font_sizes/font_size = 120
text = " "
flat = true

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Button"]
material = SubResource("ShaderMaterial_70i5f")
layout_mode = 0
offset_right = 3605.0
offset_bottom = 145.0
text = "New Game"
label_settings = ExtResource("6_oumb1")
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 8

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_v86rl")
layout_mode = 2
theme = SubResource("Theme_yqeox")
theme_override_fonts/font = ExtResource("5_cop0s")
theme_override_font_sizes/font_size = 120
text = " "
flat = true

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Button2"]
material = SubResource("ShaderMaterial_mj5lg")
layout_mode = 0
offset_right = 3605.0
offset_bottom = 145.0
text = "Settings"
label_settings = ExtResource("6_oumb1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_13sgg")
layout_mode = 2
theme = SubResource("Theme_yqeox")
theme_override_fonts/font = ExtResource("5_cop0s")
theme_override_font_sizes/font_size = 120
text = " "
flat = true

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Button3"]
material = SubResource("ShaderMaterial_ufwb2")
layout_mode = 0
offset_right = 3605.0
offset_bottom = 145.0
text = "Quit"
label_settings = ExtResource("6_oumb1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ytvr")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 999
position = Vector2(960, 540)
texture = ExtResource("7_7toyc")

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_button_3_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
